p-05-as/exercicio1/y.output
Grammar

    0 $accept: program $end

    1 program: LET vardeclist IN statementlist END

    2 vardeclist: %empty
    3           | vardeclist vardec

    4 vardec: INTEGER IDENTIFIER
    5       | CHARACTER IDENTIFIER
    6       | DOUBLE IDENTIFIER

    7 statementlist: %empty
    8              | statementlist statement

    9 statement: WRITE IDENTIFIER


Terminals, with rules where they appear

$end (0) 0
error (256)
INTEGER (258) 4
DOUBLE (259) 6
CHARACTER (260) 5
LET (261) 1
IN (262) 1
END (263) 1
WRITE (264) 9
IDENTIFIER (265) 4 5 6 9


Nonterminals, with rules where they appear

$accept (11)
    on left: 0
program (12)
    on left: 1, on right: 0
vardeclist (13)
    on left: 2 3, on right: 1 3
vardec (14)
    on left: 4 5 6, on right: 3
statementlist (15)
    on left: 7 8, on right: 1 8
statement (16)
    on left: 9, on right: 8


State 0

    0 $accept: . program $end

    LET  shift, and go to state 1

    program  go to state 2


State 1

    1 program: LET . vardeclist IN statementlist END

    $default  reduce using rule 2 (vardeclist)

    vardeclist  go to state 3


State 2

    0 $accept: program . $end

    $end  shift, and go to state 4


State 3

    1 program: LET vardeclist . IN statementlist END
    3 vardeclist: vardeclist . vardec

    INTEGER    shift, and go to state 5
    DOUBLE     shift, and go to state 6
    CHARACTER  shift, and go to state 7
    IN         shift, and go to state 8

    vardec  go to state 9


State 4

    0 $accept: program $end .

    $default  accept


State 5

    4 vardec: INTEGER . IDENTIFIER

    IDENTIFIER  shift, and go to state 10


State 6

    6 vardec: DOUBLE . IDENTIFIER

    IDENTIFIER  shift, and go to state 11


State 7

    5 vardec: CHARACTER . IDENTIFIER

    IDENTIFIER  shift, and go to state 12


State 8

    1 program: LET vardeclist IN . statementlist END

    $default  reduce using rule 7 (statementlist)

    statementlist  go to state 13


State 9

    3 vardeclist: vardeclist vardec .

    $default  reduce using rule 3 (vardeclist)


State 10

    4 vardec: INTEGER IDENTIFIER .

    $default  reduce using rule 4 (vardec)


State 11

    6 vardec: DOUBLE IDENTIFIER .

    $default  reduce using rule 6 (vardec)


State 12

    5 vardec: CHARACTER IDENTIFIER .

    $default  reduce using rule 5 (vardec)


State 13

    1 program: LET vardeclist IN statementlist . END
    8 statementlist: statementlist . statement

    END    shift, and go to state 14
    WRITE  shift, and go to state 15

    statement  go to state 16


State 14

    1 program: LET vardeclist IN statementlist END .

    $default  reduce using rule 1 (program)


State 15

    9 statement: WRITE . IDENTIFIER

    IDENTIFIER  shift, and go to state 17


State 16

    8 statementlist: statementlist statement .

    $default  reduce using rule 8 (statementlist)


State 17

    9 statement: WRITE IDENTIFIER .

    $default  reduce using rule 9 (statement)
